<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddAnnouncementActivity"
    android:background="@color/light_orange_1"
    android:id="@+id/layout_add_announcement">

    <ImageView
        android:id="@+id/imv_dog_icon"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_height="150dp"
        android:src="@drawable/icon_dog_announcement"
        android:contentDescription="@string/icon_dog" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imv_dog_icon"
        android:contentDescription="@string/scrollview"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginEnd="@dimen/margin30"
                android:layout_marginBottom="@dimen/margin25"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_paw_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sunshiney"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/dark_orange"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spn_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginEnd="@dimen/margin30"
                android:layout_marginBottom="@dimen/margin25"
                android:backgroundTint="@color/light_orange_2"
                android:popupBackground="@android:color/transparent" />

            <Spinner
                android:id="@+id/spn_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginEnd="@dimen/margin30"
                android:layout_marginBottom="@dimen/margin25"
                android:backgroundTint="@color/light_orange_2"
                android:popupBackground="@android:color/transparent" />


            <EditText
                android:id="@+id/edt_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginEnd="@dimen/margin30"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_paw_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sunshiney"
                android:hint="@string/breed"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/dark_orange"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin40"
                android:layout_marginEnd="@dimen/margin25"
                android:layout_marginBottom="@dimen/margin25"
                android:fontFamily="@font/sunshiney"
                android:text="@string/example_breed"
                android:textColor="@color/orange"
                android:textStyle="italic" />
            <!--
            <EditText
                android:id="@+id/edt_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin25"
                android:layout_marginEnd="@dimen/margin25"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_paw_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sunshiney"
                android:hint="Animal"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/dark_orange"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin40"
                android:layout_marginEnd="@dimen/margin25"
                android:layout_marginBottom="@dimen/margin25"
                android:fontFamily="@font/sunshiney"
                android:text="Example: dog"
                android:textColor="@color/orange"
                android:textStyle="italic" />

                    -->


            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginEnd="@dimen/margin30"
                android:layout_marginBottom="@dimen/margin25"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_paw_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sunshiney"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@color/dark_orange"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spn_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginEnd="@dimen/margin30"
                android:layout_marginBottom="@dimen/margin25"
                android:backgroundTint="@color/light_orange_2"
                android:popupBackground="@android:color/transparent" />

            <Button
                android:id="@+id/btn_add_image"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin40"
                android:layout_marginEnd="@dimen/margin40"
                android:layout_marginBottom="@dimen/margin25"
                android:background="@drawable/selector_profile_big_button"
                android:drawableEnd="@drawable/ic_image"
                android:drawableTint="@color/orange"
                android:fontFamily="@font/sunshiney"
                android:onClick="onClickAddImage"
                android:text="@string/add_image"
                android:textAllCaps="false"
                android:textColor="@color/white_alpha"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imv_pet"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin25"
                android:contentDescription="@string/pet_image_description"
                android:src="@drawable/icon_image" />

            <Button
                android:id="@+id/btn_add_location"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin40"
                android:layout_marginEnd="@dimen/margin40"
                android:layout_marginBottom="@dimen/margin25"
                android:background="@drawable/selector_profile_big_button"
                android:drawableEnd="@drawable/ic_location"
                android:drawableTint="@color/orange"
                android:fontFamily="@font/sunshiney"
                android:onClick="onAddLocationButtonClick"
                android:text="@string/add_location"
                android:textAllCaps="false"
                android:textColor="@color/white_alpha"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin25"
                android:layout_marginEnd="@dimen/margin25"
                android:layout_marginBottom="@dimen/margin40"
                android:backgroundTint="@color/hot_orange"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/sunshiney"
                android:hint="@string/coordinates"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_location"
                app:drawableTint="@color/orange"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"/>

            <Button
                android:id="@+id/btn_add_announcement"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin40"
                android:layout_marginEnd="@dimen/margin40"
                android:layout_marginBottom="@dimen/margin25"
                android:background="@drawable/selector_simple_button"
                android:drawableStart="@drawable/ic_done"
                android:drawableTint="@color/light_orange_1"
                android:fontFamily="@font/sunshiney"

                android:onClick="onAddAnnouncementButtonClick"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/light_orange_1"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>