...
                android:layout_marginBottom="-10dp"
                android:clipToPadding="false"
                android:padding="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_simple_button"
                    android:drawableEnd="@drawable/ic_edit"
                    android:drawableTint="@color/dark_orange"
...
